[package]
name = "discord-link-mc"
version = "0.1.0"
authors = ["Aytixel <aytixel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
dotenv_codegen = "0.15.0"
discord_game_sdk = "1.0.1"
serde_json = "1.0.64"